@@ -10,6 +10,10 @@ CHANGES
 
 * The testrepository test suite depends on testtools 0.9.8. (Robert Collins)
 
+* If interrupted while updating the ``failing`` list, temp files are now
+  cleaned up - previously a carefully timed interrupt would leave the
+  temporary failing file in place. (Robert Collins, #531665)
+
 * Local implementation of MatchesException has been removed in favour of the
   testtools implementation. All ``self.assertRaises`` have been migrated to
   this new testing interface.
